finish adoption of jakarta artifacts, switch travis to jdk11
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>